MDEV-15443 Fix wsrep XID read from rollback segment header

The problem: If some transactions were done with wsrep_on=0, a
rollback segment header having the highest trx_id assigned might
store undefined wsrep XID. When reading the wsrep checkpoint
from InnodB, the undefined wsrep XID might be returned instead
of the highest valid one.

The fix is to check if the rollback segment header stores the
valid wsrep XID before assigning it to the output XID.

This patch also takes care of resetting XID in rseg header if
the XID UUID part changes (server joins to new cluster).